--- a/OSC/index.html
+++ b/OSC/index.html
@@ -193,9 +193,9 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li>If the <em>total</em> amount of memory required for the process exceeds the available memory- then the OS can outplay it with swapping.</li>
 </ul>
 <p>NB: Swapping IS time consuming, but still saves time overall.</p>
-<h4 id="external-fragmentation">External Fragmentation</h4>
+<h3 id="external-fragmentation">External Fragmentation</h3>
 <p>Whilst <em>swapping</em> and <em>dynamic partitioning</em> can remove the problem of <em>internal fragmentation</em>, swapping can cause a new problem called <em>External Fragmentation</em>. This when swapping a process out of memory will create &quot;a hole&quot;. A new process may be either too large or too small for this gap that is left behind. If it is too small, memory is wasted in the form of an <em>unused block</em>. If a process is too large, the process may be unable to find a slot even if the total spare memory capacity is there. This leads to a decrease in efficiency. It IS possible to <em>compact</em> the memory to remove the holes and this is known as dynamic relocation. This is however, a very slow process and isn't worth a lot of the time.</p>
-<h4 id="allocation-structures">Allocation Structures</h4>
+<h3 id="allocation-structures">Allocation Structures</h3>
 <p>Man! All of this memory management shit sounds really complicated! If only there was a data structure that would allow me to not only keep track of available memory, but also provide a way to quickly allocate processes to available memory slots! No Pedro, the answer does not lie in memory.js, but instead lies in <em>Linked Lists</em>. The following image shows what such a list would look like:</p>
 <div class="figure">
 <img src="img/linkedList.png" alt="Using Linked Lists for Memory Management" />
@@ -216,5 +216,54 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul>
 <p>It is these disadvantages why bitmaps are much less common than linked lists in this context.</p>
 <p>In terms of advantages, the actual process of filling the hole is easier and faster with bitmaps because you just need to change the corresponding values from 0 to 1. Also I'm pretty sure bitmaps take up less space. The lecturer said that the advantages and disadvantages of linked lists/ bitmaps could come up in the test which is why I did some extra research on it. So make sure you understand the key differences.</p>
+<h2 id="lecture-15---memory-management">Lecture 15 - Memory Management</h2>
+<p>The goals for this lecture are:</p>
+<ul>
+<li><strong>Dynamic partitioning management</strong> with Linked lists</li>
+<li><strong>Non-contiguous approaches</strong></li>
+<li><strong>Paging</strong>, page tables, address translation</li>
+</ul>
+<h3 id="allocating-available-memory---algorithms">Allocating Available Memory - Algorithms</h3>
+<h4 id="first-fit-algorithm">First Fit Algorithm</h4>
+<ol style="list-style-type: decimal">
+<li>Starts at the head of the linked list and iterates along it until a link is found that has sufficient free space for the process</li>
+<li>If the requested space is the same as the amount of free space in this partition, all the space is allocated</li>
+<li>Else, the free link is split into two- the first node is set to the size requested and marked &quot;used&quot; whilst the second is set to the remaining size and marked &quot;free&quot;</li>
+</ol>
+<h4 id="next-fit-algorithm">Next Fit Algorithm</h4>
+<ol style="list-style-type: decimal">
+<li>Same as <strong>first-fit</strong> except stores where in the linked lists it stops, and then restarts the search from here after</li>
+<li>Gives an even chance to all memory to get allocated while first fit concentrates on the start of the list. Remember the linear array analogy, imagine repeatedly starting from the bottom to find free space.</li>
+</ol>
+<p>Simulations have shown that <em>next fit</em> actually gives a worse performance than <em>first fit</em>.</p>
+<h4 id="problems-with-firstnext-fit">Problems with First/Next Fit</h4>
+<p>These methods are both very fast due to their YOLO nature, but this can also lead to some disadvantages. For example, first fit is only looking for the first available hole/gap. Once it finds it, it doesn't give two fucks whether or not there is a more suitable free partition later on. By then its already called &quot;gg ez&quot;. This is problem because there could potentially be a free partition later on which fits the process exactly. In this scenario, the algorithm is unneccessarily breaking up a big hole, which brings more problems. Next fit doesn't improve much on this front; and so we have to look at other potential algorithms.</p>
+<h4 id="best-fit">Best Fit</h4>
+<ul>
+<li>The <strong>best fit</strong> algorithm will always search the entire linked list in order to find the smallest suitable hole for the memory request. As you can imagine, this is a lot slower than first/next fit.</li>
+<li>Best fit is the same as first/next fit in the respect that there is no guarantee that a partition with the exact right amount of memory will exist. It uses the same splitting method to solve this problem. However, since best fit finds the smallest hole to split, there could be a lot of very small holes generated. These are useless bits of memory that barely any processes will be able to use.</li>
+</ul>
+<p>Note that it IS possible to merge free partitions that are next to each other and this is called <strong>Coalescing</strong> (more on that in a bit).</p>
+<h4 id="worst-fit">Worst fit</h4>
+<ul>
+<li>Worst fit finds the largest available empty partition/hole and splits it. The idea being that there won't be any useless holes being left behind like there are with <em>best fit</em>. The holes will instead be large and probably more useful.</li>
+<li>However in reality, this algorithm sucks ass too.</li>
+</ul>
+<p>He mentions in the lecture that a typical question in an exam would be to list the advantages and disadvantages of these methods. So make sure you understand them!</p>
+<h4 id="quick-fit">Quick Fit</h4>
+<ul>
+<li>Maintains separate lists for commonly used sizes. For example could have lists for partitions of sizes 4k, 8k, 12k and so on.</li>
+<li>This is a lot faster than <em>best fit</em> at finding a required sized partition.</li>
+<li>Has same problem as <em>best fit</em> in that it can create tiny, useless partitions.</li>
+<li><em>Coalescing</em> (merging free spaces) is difficult due to the fact that it uses multiple lists.</li>
+</ul>
+<h3 id="managing-available-memory">Managing Available Memory</h3>
+<h4 id="coalescing">Coalescing</h4>
+<p>Takes place when two <em>adjacent entries</em> in the linked list become free. When a block is freed, both neighbours are examined. Two or three entries are then combined into a larger block by adding up the sizes. The excess node(s) are deleted and the length/amount of memory for the node that was originally first is updated.</p>
+<h4 id="compacting">Compacting</h4>
+<p>As you can imagine, <em>coalescing</em> can only take you so far. If it gets to the point where lots of free blocks are being sandwiched by used blocks, and are distributed across memory, then we must use <strong>compacting</strong>. Obviously, this is a pretty time-consuming process - more so than coalescing. It is a three step process: 1. Process is swapped out 2. Free space is coalesced 3. Process swapped back in at lowest available location</p>
+<p>This part of the lectured marked the end of the study of <em>contiguous</em> allocation schemes. Reminder that this is when processes are NOT split up to be stored in memory, but left as they are. The problems of such schemes are highlighted here. These include <em>internal fragmentation</em> from fixed-partitioning, as well as <em>external fragmentation</em> (wasted free holes) from dynamic partitioning.</p>
+<h3 id="paging">Paging</h3>
+<p>Paging is based on the principles of <em>fixed partitioning</em> and <em>code re-location</em>. Code relocation is the process of translating from logical/virtual memory to physical memory. Paging works by splitting memory into smaller blocks. One or more blocks are allocated to a process. For example, a 11KB process could take up 3 blocks of 4 KB. Internal fragmentation (excess, wasted memory) is reduced since there can only be excess memory wasted for the last block. There is also no external fragmentation since blocks are stacked directly onto each other in main memory (one of the main reasons for using a non-contiguous approach).</p>
 </body>
 </html>
