can't be bothered for more for now

--- a/OSC/index.html
+++ b/OSC/index.html
@@ -304,5 +304,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li>Offset is added to the start of the physical frame to allocate the correct amount of memory</li>
 </ol>
 <p>In terms of hardware implementation of address translation, the CPU's <strong>Memory Management Unit</strong> (MMU) intercepts logical addresses and uses a page table. It then stores the physical address on a <strong>memory bus</strong>.</p>
+<h2 id="lecture-16---memory-management">Lecture 16 - Memory Management</h2>
+<p>Turns out we do have to know how to calculate address translations.</p>
+<p>Topics covered in this lecture are:</p>
+<ul>
+<li>Examples of Address Translation (math shit)</li>
+<li>Principles behind <strong>virtual memory</strong></li>
+<li>Complex/ large page tables</li>
+</ul>
 </body>
 </html>
